--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "instant-clip-tokenizer"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.65"
+license = "MIT"
 
 [features]
 default = ["openai-vocabulary-file"]
