--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["instant-clip-tokenizer"]
+members = ["instant-clip-tokenizer", "instant-clip-tokenizer-py"]
 resolver = "2"
