--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,12 @@
 [workspace]
 members = ["instant-clip-tokenizer", "instant-clip-tokenizer-py"]
 resolver = "2"
+
+[workspace.package]
+edition = "2021"
+rust-version = "1.65"
+license = "MIT"
+description = "Fast text tokenizer for the CLIP neural network"
+homepage = "https://github.com/instant-labs/instant-clip-tokenizer"
+repository = "https://github.com/instant-labs/instant-clip-tokenizer"
+readme = "README.md"
