--- a/instant-clip-tokenizer/Cargo.toml
+++ b/instant-clip-tokenizer/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "instant-clip-tokenizer"
 version = "0.1.0"
-edition = "2021"
-rust-version = "1.65"
-license = "MIT"
-readme = "../README.md"
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
+description.workspace = true
+homepage.workspace = true
+repository.workspace = true
+readme.workspace = true
+documentation = "https://docs.rs/instant-clip-tokenizer"
 
 [features]
 default = ["openai-vocabulary-file"]
