--- a/instant-clip-tokenizer-py/pyproject.toml
+++ b/instant-clip-tokenizer-py/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "instant-clip-tokenizer"
+dependencies = ["numpy >= 1.16.0"]
 
 [build-system]
 requires = ["maturin >= 1.0, < 2.0"]
